kubernetes-manifests/overlays/prod/bulletin.prod.ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: bulletin-ingress
  namespace: bulletin-prod
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-staging
    cloud.google.com/neg: '{"ingress": false}'
spec:
  backend:
    serviceName: bulletin-prod
    servicePort: 8080
  rules:
  - host: bulletin.aashe.org
    http:
      paths:
      - path: /*
        backend:
          serviceName: bulletin-prod
          servicePort: 8080
  tls:
  - hosts:
     - bulletin.aashe.org
    secretName: bulletin-prod-cert-ingresss
